[package]
name = "tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_chacha = "=0.2.2"
rand_distr = "=0.2.2"
proconio = { version = "=0.3.6", features = ["derive"] }
clap = { version = "4.0.22", features = ["derive"] }
svg = "0.13.1"
delaunator = "1.0.1"
threadpool = "1.8.1"
indicatif = "0.17.2"